[project]
name = "commvault-mcp-server"
version = "0.1.0"
description = "Commvault's Official MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "keyring>=25.6.0",
    "pyfiglet>=1.0.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
]
